--- a/sass/print.scss
+++ b/sass/print.scss
@@ -38,3 +38,7 @@ input
 	visibility: hidden;
 
 }
+
+#anchor{
+	display: block !important;
+}
